@@ -120,10 +120,10 @@ stamp-h[1-9]
 /libfguid/libfguid.rc
 /libfguid/libfguid_definitions.h
 /tests/fguid_test_error
-/tests/fguid_test_get_version
 /tests/fguid_test_identifier
 /tests/fguid_test_identifier_copy_from
 /tests/fguid_test_identifier_to_string
+/tests/fguid_test_support
 /tests/tmp*
 
 # Local library dependencies specific files
