@@ -13,12 +13,6 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "fguid_test_error", "fguid_t
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
 EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "fguid_test_get_version", "fguid_test_get_version\fguid_test_get_version.vcproj", "{DCE1FE9A-9594-47CC-8BC0-855FA518100D}"
-	ProjectSection(ProjectDependencies) = postProject
-		{D183C7CA-EEAB-4669-9BBE-8289FA08A754} = {D183C7CA-EEAB-4669-9BBE-8289FA08A754}
-		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
-	EndProjectSection
-EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "fguid_test_identifier", "fguid_test_identifier\fguid_test_identifier.vcproj", "{0EE47838-F45C-41D4-BE90-AD66D95DD129}"
 	ProjectSection(ProjectDependencies) = postProject
 		{D183C7CA-EEAB-4669-9BBE-8289FA08A754} = {D183C7CA-EEAB-4669-9BBE-8289FA08A754}
@@ -37,6 +31,12 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "fguid_test_identifier_to_st
 	ProjectSection(ProjectDependencies) = postProject
 		{D183C7CA-EEAB-4669-9BBE-8289FA08A754} = {D183C7CA-EEAB-4669-9BBE-8289FA08A754}
 		{BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C} = {BD3A95FA-A3DE-4B79-A889-A7E5ECA4B69C}
+		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
+	EndProjectSection
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "fguid_test_support", "fguid_test_support\fguid_test_support.vcproj", "{DF29A4B9-7303-4E47-9BF0-0977054303F1}"
+	ProjectSection(ProjectDependencies) = postProject
+		{D183C7CA-EEAB-4669-9BBE-8289FA08A754} = {D183C7CA-EEAB-4669-9BBE-8289FA08A754}
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F} = {20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}
 	EndProjectSection
 EndProject
@@ -61,10 +61,6 @@ Global
 		{63F28105-9EE1-4034-BC0A-9DF068B84714}.Release|Win32.Build.0 = Release|Win32
 		{63F28105-9EE1-4034-BC0A-9DF068B84714}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
 		{63F28105-9EE1-4034-BC0A-9DF068B84714}.VSDebug|Win32.Build.0 = VSDebug|Win32
-		{DCE1FE9A-9594-47CC-8BC0-855FA518100D}.Release|Win32.ActiveCfg = Release|Win32
-		{DCE1FE9A-9594-47CC-8BC0-855FA518100D}.Release|Win32.Build.0 = Release|Win32
-		{DCE1FE9A-9594-47CC-8BC0-855FA518100D}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
-		{DCE1FE9A-9594-47CC-8BC0-855FA518100D}.VSDebug|Win32.Build.0 = VSDebug|Win32
 		{0EE47838-F45C-41D4-BE90-AD66D95DD129}.Release|Win32.ActiveCfg = Release|Win32
 		{0EE47838-F45C-41D4-BE90-AD66D95DD129}.Release|Win32.Build.0 = Release|Win32
 		{0EE47838-F45C-41D4-BE90-AD66D95DD129}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
@@ -77,6 +73,10 @@ Global
 		{FE1DC155-3C65-4D44-AF9C-7765F3636151}.Release|Win32.Build.0 = Release|Win32
 		{FE1DC155-3C65-4D44-AF9C-7765F3636151}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
 		{FE1DC155-3C65-4D44-AF9C-7765F3636151}.VSDebug|Win32.Build.0 = VSDebug|Win32
+		{DF29A4B9-7303-4E47-9BF0-0977054303F1}.Release|Win32.ActiveCfg = Release|Win32
+		{DF29A4B9-7303-4E47-9BF0-0977054303F1}.Release|Win32.Build.0 = Release|Win32
+		{DF29A4B9-7303-4E47-9BF0-0977054303F1}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
+		{DF29A4B9-7303-4E47-9BF0-0977054303F1}.VSDebug|Win32.Build.0 = VSDebug|Win32
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}.Release|Win32.ActiveCfg = Release|Win32
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}.Release|Win32.Build.0 = Release|Win32
 		{20FFC4C9-F44C-45F6-A827-4819B4DF3C9F}.VSDebug|Win32.ActiveCfg = VSDebug|Win32
