@@ -19,10 +19,10 @@ EXTRA_DIST = \
 
 check_PROGRAMS = \
 	fguid_test_error \
-	fguid_test_get_version \
 	fguid_test_identifier \
 	fguid_test_identifier_copy_from \
-	fguid_test_identifier_to_string
+	fguid_test_identifier_to_string \
+	fguid_test_support
 
 fguid_test_error_SOURCES = \
 	fguid_test_error.c \
@@ -32,17 +32,6 @@ fguid_test_error_SOURCES = \
 	fguid_test_unused.h
 
 fguid_test_error_LDADD = \
-	../libfguid/libfguid.la \
-	@LIBCSTRING_LIBADD@
-
-fguid_test_get_version_SOURCES = \
-	fguid_test_get_version.c \
-	fguid_test_libcstring.h \
-	fguid_test_libfguid.h \
-	fguid_test_macros.h \
-	fguid_test_unused.h
-
-fguid_test_get_version_LDADD = \
 	../libfguid/libfguid.la \
 	@LIBCSTRING_LIBADD@
 
@@ -79,6 +68,17 @@ fguid_test_identifier_to_string_SOURCES = \
 fguid_test_identifier_to_string_LDADD = \
 	../libfguid/libfguid.la \
 	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fguid_test_support_SOURCES = \
+	fguid_test_libcstring.h \
+	fguid_test_libfguid.h \
+	fguid_test_macros.h \
+	fguid_test_support.c \
+	fguid_test_unused.h
+
+fguid_test_support_LDADD = \
+	../libfguid/libfguid.la \
 	@LIBCSTRING_LIBADD@
 
 MAINTAINERCLEANFILES = \
