@@ -11,7 +11,7 @@ TEST_PREFIX=`dirname ${PWD}`;
 TEST_PREFIX=`basename ${TEST_PREFIX} | sed 's/^lib\([^-]*\).*$/\1/'`;
 
 TEST_PROFILE="lib${TEST_PREFIX}";
-TEST_FUNCTIONS="get_version error identifier_copy_from identifier_to_string";
+TEST_FUNCTIONS="error identifier_copy_from identifier_to_string support";
 TEST_FUNCTIONS_WITH_INPUT="";
 OPTION_SETS="";
 
