@@ -5,8 +5,12 @@ TODO
   - string to identifier utf16
   - string to identifier utf32
   - identifier to byte stream
+  - check string test output missing { ?
 * add support for retrieving identifier values
   - add test
+
+20161103
+* worked on tests
 
 20160828
 * worked on tests
